<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_random_movement"
        android:summary="@string/pref_random_movement_description"
        android:title="@string/pref_random_movement_title" />

    <ListPreference
        android:defaultValue="1000"
        android:entries="@array/pref_location_change_interval_list_titles"
        android:entryValues="@array/pref_location_change_interval_list_values"
        android:key="pref_location_change_interval"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_location_change_interval_title"
        android:dependency="pref_random_movement"/>

    <ListPreference
        android:defaultValue="0.0001"
        android:entries="@array/pref_location_change_distance_list_titles"
        android:entryValues="@array/pref_location_change_distance_list_values"
        android:key="pref_location_change_distance"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_location_change_distance_title"
        android:dependency="pref_random_movement"/>

    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_sensor_mode"
        android:summary="@string/pref_sensor_mode_description"
        android:title="@string/pref_sensor_mode_title"
        android:dependency="pref_random_movement"/>

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <!--<EditTextPreference-->
        <!--android:capitalize="words"-->
        <!--android:defaultValue="@string/pref_default_display_name"-->
        <!--android:inputType="textCapWords"-->
        <!--android:key="example_text"-->
        <!--android:maxLines="1"-->
        <!--android:selectAllOnFocus="true"-->
        <!--android:singleLine="true"-->
        <!--android:title="@string/pref_title_display_name" />-->

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->


</PreferenceScreen>
